alignment nav fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -152,7 +152,6 @@ span h4 {
             }
         }
         ul {
-            text-align: center;
             padding: 0;
             @media @tablet {
                 /* Hidden until nav icon is clicked */
@@ -233,14 +232,6 @@ span h4 {
                         letter-spacing: @font-swatch6-letter-spacing;
                         position: relative;
                         &:after {
-                            content: "\25BC";
-                            font-size: 8px;
-                            position: absolute;
-                            top: 1px;
-                            display: block;
-                            z-index: 9999999;
-                            right: 0;
-                            color: @color-swatch3;
                             @media @tablet {
                                 font-size: 10px;
                                 padding-right: 10px;
@@ -328,10 +319,6 @@ span h4 {
     color:@font-swatch6-color;
 }
 
-.widget .extendednavigation ul li.folder:after {
-    display: none;
-}
-
 .bk-pt-default .widget.extendednavigation {
     background-color: transparent;
     ul {
@@ -361,6 +348,10 @@ span h4 {
 	margin-bottom: -8px;
 	padding-bottom: 3px;
 	text-decoration: none;
+}
+
+.widget .extendednavigation ul li.folder:after {
+	border-top-color: @color-swatch3;
 }
 
 /* 
@@ -1646,6 +1637,10 @@ input, textarea {
 	.responsivecolumns .columns-two-right, .columns-two-50-50 .columns-two-right {
 		width: 100%!important;
 		margin-left: 1.5%;
+	}
+	.widget .extendednavigation ul.align-right li.folder:after {
+    	right: 5px;
+    	left: inherit;
 	}
 }
 
